added weather image

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,6 +17,7 @@
             <input placeholder="location">
             <button >Search</button>
         </form>
+        <p id="weather_img"></p>
         <p id="weather_result"> </p>
     </div>
     {{>footer}}
