updated multiple files

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="maincontent">
         {{>header}}
-        <p> This is a weather website which provides information like current temperature, overall weather and many more.</p>
+        <p>{{message}}</p>
     </div>
     
     {{>footer}}
